--- a/WpfApp1.Views/WpfApp1.Views.csproj
+++ b/WpfApp1.Views/WpfApp1.Views.csproj
@@ -7,4 +7,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WpfApp1.DataModels\WpfApp1.DataModels.csproj" />
+    <ProjectReference Include="..\WpfApp1.ViewModel\WpfApp1.ViewModel.csproj" />
+  </ItemGroup>
+
 </Project>
