--- a/WpfApp1.Views/WpfApp1.Views.csproj
+++ b/WpfApp1.Views/WpfApp1.Views.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0-windows</TargetFramework>
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WpfApp1.CustomControls\WpfApp1.CustomControls.csproj" />
     <ProjectReference Include="..\WpfApp1.DataModels\WpfApp1.DataModels.csproj" />
     <ProjectReference Include="..\WpfApp1.ViewModel\WpfApp1.ViewModel.csproj" />
   </ItemGroup>
